# csc871-anti-money-laundering-ibm-gnn

./: README.md  anti_money_laundering_ibm.ipynb  chris-test-edges.ipynb  cuda_diagnose.py  gine-model.ipynb  gine-with-batches-model.ipynb  main.py  pyproject.toml  requirements.txt  tabular_baseline.py  tabular_mlp.ipynb  tabular_mlp.py  tabular_xgboost.ipynb
