[project]
name = "csc865-anti-money-laundering-ibm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "matplotlib",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch==2.9.1",
    "torchmetrics>=1.8.2",
    "torch_geometric",
    "scikit-learn"
]

# 1. Define the CUDA 12.8 PyTorch Index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 2. Tell uv to use that index specifically for torch
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }